RESOLVED FIXED Bug 152023
Modern IDB: storage/indexeddb/objectstore-cursor.html fails
https://bugs.webkit.org/show_bug.cgi?id=152023
Summary Modern IDB: storage/indexeddb/objectstore-cursor.html fails
Brady Eidson
Reported 2015-12-08 16:30:25 PST
Modern IDB: storage/indexeddb/objectstore-cursor.html fails
Attachments
Patch v1 (3.33 KB, patch)
2015-12-08 16:31 PST, Brady Eidson
no flags
Brady Eidson
Comment 1 2015-12-08 16:31:43 PST
Created attachment 266952 [details] Patch v1
Brady Eidson
Comment 2 2015-12-08 17:08:31 PST
From the bots with failing tests: [1/10] imported/w3c/web-platform-tests/XMLHttpRequest/interfaces.html failed unexpectedly (text diff) [2/10] imported/w3c/web-platform-tests/XMLHttpRequest/timeout-sync.htm failed unexpectedly (text diff) [3/10] imported/w3c/web-platform-tests/XMLHttpRequest/responsetype.html failed unexpectedly (text diff) [4/10] imported/w3c/web-platform-tests/dom/interfaces.html failed unexpectedly (text diff) [5/10] imported/w3c/web-platform-tests/dom/nodes/Node-isEqualNode.xhtml failed unexpectedly (text diff) [6/10] imported/w3c/web-platform-tests/dom/nodes/Document-contentType/contentType/contenttype_datauri_02.html failed unexpectedly (text diff) [7/10] imported/w3c/web-platform-tests/dom/nodes/Document-contentType/contentType/contenttype_datauri_01.html failed unexpectedly (text diff) [8/10] imported/w3c/web-platform-tests/html/dom/interfaces.html failed unexpectedly (text diff) And: [1/9] imported/w3c/web-platform-tests/XMLHttpRequest/interfaces.html failed unexpectedly (text diff) [2/9] imported/w3c/web-platform-tests/XMLHttpRequest/timeout-sync.htm failed unexpectedly (text diff) [3/9] imported/w3c/web-platform-tests/XMLHttpRequest/responsetype.html failed unexpectedly (text diff) [4/9] imported/w3c/web-platform-tests/dom/interfaces.html failed unexpectedly (text diff) [5/9] imported/w3c/web-platform-tests/dom/nodes/Node-isEqualNode.xhtml failed unexpectedly (text diff) [6/9] imported/w3c/web-platform-tests/dom/nodes/Document-contentType/contentType/contenttype_datauri_02.html failed unexpectedly (text diff) [7/9] imported/w3c/web-platform-tests/dom/nodes/Document-contentType/contentType/contenttype_datauri_01.html failed unexpectedly (text diff) [8/9] imported/w3c/web-platform-tests/html/dom/interfaces.html failed unexpectedly (text diff) And: [1/6] imported/w3c/web-platform-tests/XMLHttpRequest/interfaces.html failed unexpectedly (text diff) [2/6] imported/w3c/web-platform-tests/XMLHttpRequest/timeout-sync.htm failed unexpectedly (text diff) [3/6] imported/w3c/web-platform-tests/XMLHttpRequest/responsetype.html failed unexpectedly (text diff) [4/6] imported/w3c/web-platform-tests/dom/nodes/Node-isEqualNode.xhtml failed unexpectedly (text diff) [5/6] imported/w3c/web-platform-tests/dom/nodes/Document-contentType/contentType/contenttype_datauri_02.html failed unexpectedly (text diff) [6/6] imported/w3c/web-platform-tests/dom/nodes/Document-contentType/contentType/contenttype_datauri_01.html failed unexpectedly (text diff) These failures are *NOT* because of this patch.
Brady Eidson
Comment 3 2015-12-08 17:08:51 PST
Looks like at least one of the EWS bots is cleaning up its state
WebKit Commit Bot
Comment 4 2015-12-08 17:59:27 PST
Comment on attachment 266952 [details] Patch v1 Clearing flags on attachment: 266952 Committed r193801: <http://trac.webkit.org/changeset/193801>
WebKit Commit Bot
Comment 5 2015-12-08 17:59:31 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.