Modern IDB: storage/indexeddb/objectstore-cursor.html fails. https://bugs.webkit.org/show_bug.cgi?id=152023

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (At least one failing test now passes).

* Modules/indexeddb/server/MemoryObjectStoreCursor.cpp:
(WebCore::IDBServer::MemoryObjectStoreCursor::MemoryObjectStoreCursor):
(WebCore::IDBServer::MemoryObjectStoreCursor::setReverseIteratorFromRemainingRange): Make sure the
  found iterator is actually in the target range.

LayoutTests:

* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/170178@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193801 268f45cc-cd09-0410-ab3c-d52691b4dbfc